# AI_a3_repo_group_5

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: AI_AT3_Facial_Experession_Recognition_using_ViT.ipynb  moodify_eda.ipynb
src/: emotion_detection.py  music_recommender.py
