[tool.poetry]
name = "ai-a3-repo-group-5"
version = "0.1.0"
description = ""
authors = ["kathegolon-uts <katherin.a.gomezlondono@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.45.0"
transformers = "^4.51.3"
torch = "^2.7.0"
pillow = "^11.2.1"
pandas = "^2.2.3"
streamlit-lottie = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
